--- a/index.html
+++ b/index.html
@@ -5,90 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gene新闻头条</title>
     <style>
-        /* --- 全局样式 --- */
+        /* --- 全局与背景 --- */
+        @keyframes gradient-animation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             margin: 0;
-            background-color: #f0f2f5;
-            color: #1c1e21;
+            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            background: linear-gradient(-45deg, #fcede4, #e8f7f7, #e1e9fc, #f9e2f3);
+            background-size: 400% 400%;
+            animation: gradient-animation 15s ease infinite;
         }
+
         .main-container {
             width: 100%;
             max-width: 800px;
-            background-color: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            background-color: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            animation: fadeInContainer 0.5s ease-out;
+        }
+        @keyframes fadeInContainer {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         /* --- 初始选择界面 --- */
         #selection-container {
-            padding: 40px 20px;
+            padding: 50px 30px;
             text-align: center;
         }
         #selection-container h1 {
-            font-size: 28px;
-            color: #333;
-            margin-bottom: 30px;
+            font-size: 32px;
+            color: #34495e;
+            margin-bottom: 35px;
+            font-weight: 700;
         }
         .category-buttons {
             display: flex;
             flex-direction: column;
-            gap: 15px;
+            gap: 18px;
         }
         .category-btn {
-            padding: 15px 25px;
+            padding: 16px 25px;
             font-size: 18px;
             font-weight: bold;
             border: none;
-            border-radius: 8px;
+            border-radius: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
             color: white;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
         }
         #social-btn {
-            background-color: #1877f2; /* 蓝色 */
+            background-color: #5dade2; /* 水蓝色 */
         }
         #social-btn:hover {
-            background-color: #166fe5;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(93, 173, 226, 0.4);
         }
         #campus-btn {
-            background-color: #36a420; /* 绿色 */
+            background-color: #48c9b0; /* 青色 */
         }
         #campus-btn:hover {
-            background-color: #2b8c1a;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(72, 201, 176, 0.4);
         }
 
         /* --- 新闻列表界面 --- */
         #news-container {
-            display: none; /* 默认隐藏 */
-            padding: 20px;
+            display: none;
+            padding: 25px;
         }
         .news-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             border-bottom: 2px solid #e0e0e0;
-            padding-bottom: 10px;
+            padding-bottom: 15px;
             margin-bottom: 20px;
         }
         #news-category-title {
-            font-size: 24px;
+            font-size: 26px;
             font-weight: bold;
-            color: #1c1e21;
+            color: #2c3e50;
         }
         #back-btn {
             background: #e4e6eb;
             color: #333;
             border: none;
-            padding: 8px 15px;
-            border-radius: 6px;
+            padding: 10px 18px;
+            border-radius: 8px;
             cursor: pointer;
             font-weight: bold;
+            transition: background-color 0.2s;
+        }
+        #back-btn:hover {
+            background-color: #d8dbe0;
         }
         #headline-list {
             list-style: none;
@@ -96,26 +120,35 @@
             margin: 0;
         }
         .headline-item {
-            padding: 15px 10px;
+            padding: 18px 12px;
             border-bottom: 1px solid #e9ebee;
             cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        .headline-item:last-child {
+            border-bottom: none;
         }
         .headline-item:hover {
-            background-color: #f5f6f7;
+            background-color: rgba(232, 247, 247, 0.5);
         }
         .headline-item a {
             text-decoration: none;
-            color: #0d1d3a;
+            color: #2c3e50;
             font-size: 18px;
             font-weight: 500;
+            line-height: 1.5;
         }
         .headline-meta {
-            font-size: 12px;
+            font-size: 13px;
             color: #606770;
             margin-top: 8px;
         }
         .headline-meta .source {
             font-weight: bold;
+            color: #5dade2;
+        }
+        .headline-meta .source.campus {
+            color: #48c9b0;
         }
 
         /* --- 新闻内容模态框 --- */
@@ -128,71 +161,67 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgba(0,0,0,0.6);
+            background-color: rgba(0,0,0,0.5);
             animation: fadeIn 0.3s;
         }
         .modal-content {
             background-color: #fff;
             margin: 15% auto;
-            padding: 30px;
-            border-radius: 8px;
+            padding: 35px;
+            border-radius: 16px;
             width: 90%;
             max-width: 600px;
             position: relative;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            animation: slideIn 0.3s;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+            animation: slideIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
         .close-button {
             color: #aaa;
             position: absolute;
             top: 15px;
-            right: 20px;
-            font-size: 28px;
+            right: 25px;
+            font-size: 32px;
             font-weight: bold;
             cursor: pointer;
+            transition: color 0.2s;
         }
-        #modal-headline {
-            font-size: 22px;
-            margin-bottom: 20px;
-            line-height: 1.4;
-        }
-        #modal-body {
-            font-size: 16px;
-            line-height: 1.7;
+        .close-button:hover {
             color: #333;
         }
+        #modal-headline {
+            font-size: 24px;
+            margin-bottom: 25px;
+            line-height: 1.4;
+            color: #2c3e50;
+        }
+        #modal-body {
+            font-size: 17px;
+            line-height: 1.8;
+            color: #34495e;
+        }
         @keyframes fadeIn { from {opacity: 0;} to {opacity: 1;} }
-        @keyframes slideIn { from {transform: translateY(-50px);} to {transform: translateY(0);} }
+        @keyframes slideIn { from {transform: translateY(-50px); opacity: 0;} to {transform: translateY(0); opacity: 1;} }
 
     </style>
 </head>
 <body>
 
     <div class="main-container">
-
-        <!-- 初始选择界面 -->
         <div id="selection-container">
             <h1>Gene新闻头条</h1>
             <div class="category-buttons">
-                <button id="social-btn" class="category-btn">查看社会新闻</button>
-                <button id="campus-btn" class="category-btn">查看Gene高新闻</button>
+                <button id="social-btn" class="category-btn">社会新闻</button>
+                <button id="campus-btn" class="category-btn">Gene高新闻</button>
             </div>
         </div>
-
-        <!-- 新闻列表界面 -->
         <div id="news-container">
             <div class="news-header">
                 <h2 id="news-category-title"></h2>
                 <button id="back-btn">&larr; 返回</button>
             </div>
-            <ul id="headline-list">
-                <!-- JS动态生成新闻列表 -->
-            </ul>
+            <ul id="headline-list"></ul>
         </div>
-
     </div>
-
-    <!-- 新闻内容模态框 -->
     <div id="news-modal" class="modal">
         <div class="modal-content">
             <span id="close-modal-btn" class="close-button">&times;</span>
@@ -201,10 +230,10 @@
         </div>
     </div>
 
-
     <script>
-    // --- 新闻数据库 ---
+    // --- 新闻数据库 (扩充版) ---
     const socialNews = [
+        // 保留旧内容
         { headline: "惊！男子街头耍帅玩壁咚，竟将公共墙壁捶出窟窿！", story: "三言两语学电影主角玩壁咚，结果用力过猛把墙捶出个洞，手卡在里面，最后还是平均两天打电话叫的消防队。" },
         { headline: "UFO目击事件？警方介入调查，真相竟是邻家脸盆！", story: "作为一天报警称有UFO降临他家阳台，警察赶到后发现是邻居吹落的塑料脸盆。" },
         { headline: "离奇失踪案告破，男子称“走进内心世界”，竟是在偷看日记。", story: "平均两天发现三言两语在偷看自己的日记，三言两语辩称：“我想走进你的内心世界。”平均两天：“我的内心世界不欢迎没文化的人。”" },
@@ -218,10 +247,18 @@
         { headline: "男子雨中漫步寻浪漫，不料地滑上演“速度与激情”，终点是泥坑。", story: "三言两语试图在雨中上演浪漫情节，结果因为地滑，一路滑进了泥坑。" },
         { headline: "KTV歌神诞生？一曲高歌后，竟收到“下次不许唱了”的最高评价。", story: "三言两语在KTV为平均两天高歌一曲，平均两天听后点评：“唱得很好，下次不许唱了。”" },
         { headline: "“随手关灯”好习惯引风波，男子竟将整条街路灯关闭。", story: "彬彬有礼看到“随手关灯”的标语，把整条街的路灯都关了，被社区管理员追着教育。" },
-        { headline: "读心术大师街头献艺，为何屡猜屡错？大师回应：是你们的心不按套路出牌！", story: "三言两语声称自己会读心术，结果每次都猜错，他解释说：“是你们的心不按套路出牌。”" }
+        { headline: "读心术大师街头献艺，为何屡猜屡错？大师回应：是你们的心不按套路出牌！", story: "三言两语声称自己会读心术，结果每次都猜错，他解释说：“是你们的心不按套路出牌。”" },
+        // 新增内容
+        { headline: "非人感爆棚！男子尝试与猫狗用“意念”交流，反被当成新型猫抓板。", story: "作为一天认为动物是外星派来的观察员，尝试与小区的流浪猫进行精神链接，结果被猫咪热情地抓了一身印记。" },
+        { headline: "纹身事故！男子想纹“爱人”竟变“爱人半”，店家称“半价优惠”。", story: "三言两语想纹身“爱人平均两天”，结果纹身师手抖，纹成了“爱人平均两天半”。" },
+        { headline: "动物园骚动！两男子模仿大猩猩过于逼真，被饲养员投喂香蕉。", story: "三言两语与作为一天打赌，输的人要模仿大猩猩，结果两人因模仿太像被动物园麻醉针击中，次日登上社会新闻。" },
+        { headline: "天降陨石还是工地废料？男子重金求购“天外飞仙”，惨遭打脸。", story: "三言两语重金买下陨石送给平均两天，说“这是我对你天外飞仙般的爱”，平均两天检测后发现是工地水泥块。" },
+        { headline: "“时间胶囊”变“海洋垃圾”，男子沙滩埋宝，次日被潮水无情卷走。", story: "作为一天在沙滩上埋下“时间胶囊”，约定十年后打开，结果第二天就被涨潮冲走了。" },
+        { headline: "史上最倒霉抽奖者诞生！在“谢谢惠顾”和百万游艇中，精准抽中商家瓶盖。", story: "小松鼠参加抽奖活动，在“谢谢惠顾”和“价值百万的游艇”中，精准抽中商家忘拿走的“再来一瓶”瓶盖。" }
     ];
 
     const campusNews = [
+        // 保留旧内容
         { headline: "校园情圣深情告白，竟被学霸女友比作“节能灯”！", story: "三言两语对平均两天说“你是我生命中的光”，平均两天回应：“谢谢，我是节能灯，不是很亮还省电。”" },
         { headline: "天选倒霉蛋？小松鼠抽中头奖与校草共进晚餐，餐厅竟停电！", story: "小松鼠参加学校年会抽中头奖“与彬彬有礼共进晚餐”，结果当晚因为太倒霉，餐厅停电，两人摸黑吃了一顿。" },
         { headline: "“知识胶囊”风靡校园，吃下就能变学霸？真相令人哭笑不得。", story: "作业领域推出“知识胶囊”，声称吃下就能掌握一门外语，平均两天买后发现胶囊里是写着“好好学习”的纸条。" },
@@ -232,13 +269,19 @@
         { headline: "宿舍爆米花派对失控，厨房惨变“米花海洋”！", story: "三言两语和作为一天试图在宿舍自制爆米花，结果错估了玉米的数量，整个厨房都被爆米花淹没。" },
         { headline: "为练平衡感，男生宿舍内转篮球，结果把自己转晕了。", story: "彬彬有礼为练习平衡感，尝试在指尖转篮球，结果篮球没转起来，自己转了三圈后晕倒了。" },
         { headline: "学霸的神操作！平均两天用三句话，竟让推销员买下自己的盆栽。", story: "平均两天仅用三句话就说服了喋喋不休的推销员，并成功把自家的盆栽卖给了他。" },
-        { headline: "宿舍辩论赛：太阳与月亮哪个重要？两男子为此大打出手！", story: "小松鼠与三言两语为“太阳和月亮哪个更重要”大打出手，双双认为自己的观点照亮了对方的盲区。" },
+        { headline: "宿舍辩论赛：太阳与月亮哪个重要？两男子为此大打出手！", story: "小松鼠与三言两语为“太阳和月亮哪个重要”大打出手，双双认为自己的观点照亮了对方的盲区。" },
         { headline: "天才发明家？作为一天发明五米长吸管，竟意外钓上金鱼！", story: "作为一天发明了“懒人喝水器”，一个长达五米的吸管，结果三言两语试用时因为吸力太大把金鱼也吸了进来。" },
         { headline: "损友的“爱”！彬彬有礼白衬衫惨遭涂鸦，竟机智化解。", story: "三言两语在彬彬有礼的白衬衫上画了一只乌龟，彬彬有礼发现后，淡定地在乌龟旁边画了个“第一名”的奖杯。" },
-        { headline: "最“尬”搭讪现场：为吸引女生注意，男子当场表演B-Box被保安带走。", story: "三言两语因插队被劝阻，竟当场表演B-Box以示抗议，被保安拖走时节奏仍未乱。" }
+        { headline: "最“尬”搭讪现场：为吸引女生注意，男子当场表演B-Box被保安带走。", story: "三言两语因插队被劝阻，竟当场表演B-Box以示抗议，被保安拖走时节奏仍未乱。" },
+        // 新增内容
+        { headline: "地球物理课重大发现？作为一天称地球是“圈”，因他沿操场走回了起点。", story: "作为一天为证明地球是平的，沿着学校操场一直走，最终走回了起点，并得出结论：“地球是个圈。”" },
+        { headline: "逻辑鬼才！为躲避宿管检查，竟扛起自行车在楼道狂奔。", story: "作为一天酒后骑共享单车回宿舍，为躲避夜间检查的平均两天，竟扛起单车在人行道狂奔。" },
+        { headline: "校园艺术节惊现“神秘符号”，竟是作为一天在草坪上画的“星际通讯图”。", story: "作为一天在艺术节上提交的作品是在草坪上用石子摆出的复杂图案，他声称这是用于联络母星的星际地图，最后被评为“最具想象力奖”。" },
+        { headline: "宿舍关系破裂？男子因打赌输掉，竟被罚用酱油洗头，引来蜜蜂围观。", story: "作为一天说服三言两语，说用酱油洗头能让头发更黑，结果两人顶着一头酱油味被蜜蜂追了三条街。" },
+        { headline: "解剖学天才还是单纯饿了？平均两天看着实验室骨架，竟开始讨论哪个部位适合烧烤。", story: "平均两天受邀参加美食节目，主持人请他用一个词形容作为一天的厨艺，他思考后说：“消防员应该会喜欢。”" },
+        { headline: "校园“机器人”竟是真人？小松鼠因走路顺拐，被机器人大赛误当参赛作品。", story: "小松鼠因为走路同手同脚，被机器人展会的工作人员误当成最新款机器人抬了进去。" }
     ];
 
-    // --- DOM 元素获取 ---
     const selectionContainer = document.getElementById('selection-container');
     const newsContainer = document.getElementById('news-container');
     const socialBtn = document.getElementById('social-btn');
@@ -251,41 +294,27 @@
     const modalHeadline = document.getElementById('modal-headline');
     const modalBody = document.getElementById('modal-body');
 
-    // --- 函数定义 ---
-    function showNews(category, categoryName) {
-        // 1. 切换界面
+    function showNews(category, categoryName, categoryClass) {
         selectionContainer.style.display = 'none';
         newsContainer.style.display = 'block';
         newsCategoryTitle.textContent = categoryName;
-
-        // 2. 清空旧列表
         headlineList.innerHTML = '';
-
-        // 3. 随机选取5条新闻
         const shuffled = category.sort(() => 0.5 - Math.random());
         const selectedNews = shuffled.slice(0, 5);
-
-        // 4. 生成新闻列表
         selectedNews.forEach(news => {
             const listItem = document.createElement('li');
             listItem.className = 'headline-item';
-            
-            // 模拟时间和来源
             const randomMinutes = Math.floor(Math.random() * 59);
             const fakeTime = `${randomMinutes}分钟前`;
-            
             listItem.innerHTML = `
                 <a>${news.headline}</a>
                 <div class="headline-meta">
-                    <span class="source">Gene新闻</span> &bull; <span>${fakeTime}</span>
+                    <span class="source ${categoryClass}">Gene新闻</span> &bull; <span>${fakeTime}</span>
                 </div>
             `;
-
-            // 5. 为每条新闻添加点击事件，以显示模态框
             listItem.addEventListener('click', () => {
                 showModal(news.headline, news.story);
             });
-
             headlineList.appendChild(listItem);
         });
     }
@@ -305,19 +334,15 @@
         selectionContainer.style.display = 'block';
     }
 
-    // --- 事件监听 ---
-    socialBtn.addEventListener('click', () => showNews(socialNews, '社会新闻'));
-    campusBtn.addEventListener('click', () => showNews(campusNews, 'Gene高新闻'));
+    socialBtn.addEventListener('click', () => showNews(socialNews, '社会新闻', 'social'));
+    campusBtn.addEventListener('click', () => showNews(campusNews, 'Gene高新闻', 'campus'));
     backBtn.addEventListener('click', showSelection);
     closeModalBtn.addEventListener('click', hideModal);
-
-    // 点击模态框外部区域也可关闭
     window.addEventListener('click', (event) => {
         if (event.target == modal) {
             hideModal();
         }
     });
-
     </script>
 
 </body>
