--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
         { headline: "UFO目击事件？警方介入调查，真相竟是邻家脸盆！", story: "作为一天报警称有UFO降临他家阳台，警察赶到后发现是邻居吹落的塑料脸盆。" },
         { headline: "离奇失踪案告破，男子称“走进内心世界”，竟是在偷看日记。", story: "平均两天发现三言两语在偷看自己的日记，三言两语辩称：“我想走进你的内心世界。”平均两天：“我的内心世界不欢迎没文化的人。”" },
         { headline: "男子自称外星后裔，每日向天空“发功”，竟引来蝙蝠围观。", story: "作为一天坚信自己是外星人后代，每日对着天空发送脑电波，试图联系母星，结果引来了附近的蝙蝠群。" },
-        { headline: "“最强大脑”竟是我自己？男子凭微表情破解密室，顺手修好店内电路。", story: "平均两天在作业领域新开的密室里，仅用三分钟就破解了所有谜题，并顺手修复了店里的一个电路故障。" },
+        { headline: "“最强大脑”竟是我自己？男子凭微表情破解密室，顺手修好店内电路。", story: "平均两天在作业淋雨新开的密室里，仅用三分钟就破解了所有谜题，并顺手修复了店里的一个电路故障。" },
         { headline: "浪漫求爱变“行为艺术”，法拉利惊现喷泉池，车主情绪稳定。", story: "三言两语为耍帅尝试单手开法拉利，结果把车开进了喷泉池，平均两天路过并拍照留念。" },
         { headline: "天降横财还是天降横祸？男子捡到钱包，打开一看竟是自己的。", story: "小松鼠在路上捡到一个钱包，打开一看是自己的，原来是裤子破了个洞。" },
         { headline: "匪夷所思！两人为“心中有海”理念，客厅开趴，双双中暑送医。", story: "两人为证明“只要心中有海，哪里都是马尔代夫”，在客厅沙滩裤配墨镜，结果被平均两天当成中暑送医。" },
         { headline: "健身房变“社交场”，跑步机上的汗水，不如美女教练的微笑。", story: "彬彬有礼和三言两语去健身房，彬彬有礼在跑步，三言两语在和每个路过的美女教练聊天。" },
         { headline: "特异功能还是恶作剧？男子声称能与植物交流，仙人掌表示“很扎手”。", story: "作为一天声称自己能和植物交流，三言两语让他翻译一下仙人掌的话，作为一天说：“它说它很扎手。”" },
         { headline: "男子雨中漫步寻浪漫，不料地滑上演“速度与激情”，终点是泥坑。", story: "三言两语试图在雨中上演浪漫情节，结果因为地滑，一路滑进了泥坑。" },
-        { headline: "KTV歌神诞生？一曲高歌后，竟收到“下次不许唱了”的最高评价。", story: "三言两语在KTV为平均两天高歌一曲，平均两天听后点评：“唱得很好，下次不许唱了。”" },
+        { headline: "KTV歌神诞生？一曲高歌后，竟收到“下次把设备费付一下”的账单。", story: "三言两语在KTV为平均两天高歌一曲，平均两天听后点评：“唱得很好，专业到可以直接出道了。不过下次记得把录音棚级别的设备租赁费付一下。”" },
         { headline: "“随手关灯”好习惯引风波，男子竟将整条街路灯关闭。", story: "彬彬有礼看到“随手关灯”的标语，把整条街的路灯都关了，被社区管理员追着教育。" },
         { headline: "读心术大师街头献艺，为何屡猜屡错？大师回应：是你们的心不按套路出牌！", story: "三言两语声称自己会读心术，结果每次都猜错，他解释说：“是你们的心不按套路出牌。”" },
         { headline: "非人感爆棚！男子尝试与猫狗用“意念”交流，反被当成新型猫抓板。", story: "作为一天认为动物是外星派来的观察员，尝试与小区的流浪猫进行精神链接，结果被猫咪热情地抓了一身印记。" },
@@ -251,21 +251,21 @@
         { headline: "动物园骚动！两男子模仿大猩猩过于逼真，被饲养员投喂香蕉。", story: "三言两语与作为一天打赌，输的人要模仿大猩猩，结果两人因模仿太像被动物园麻醉针击中，次日登上社会新闻。" },
         { headline: "天降陨石还是工地废料？男子重金求购“天外飞仙”，惨遭打脸。", story: "三言两语重金买下陨石送给平均两天，说“这是我对你天外飞仙般的爱”，平均两天检测后发现是工地水泥块。" },
         { headline: "“时间胶囊”变“海洋垃圾”，男子沙滩埋宝，次日被潮水无情卷走。", story: "作为一天在沙滩上埋下“时间胶囊”，约定十年后打开，结果第二天就被涨潮冲走了。" },
-        { headline: "史上最倒霉抽奖者诞生！在“谢谢惠顾”和百万游艇中，精准抽中商家瓶盖。", story: "小松鼠参加抽奖活动，在“谢谢惠顾”和“价值百万的游令”中，精准抽中商家忘拿走的“再来一瓶”瓶盖。" },
+        { headline: "史上最倒霉抽奖者诞生！在“谢谢惠顾”和百万游艇中，精准抽中商家瓶盖。", story: "小松鼠参加抽奖活动，在“谢谢惠顾”和“价值百万的游艇”中，精准抽中商家忘拿走的“再来一瓶”瓶盖。" },
         { headline: "城市交通瘫痪，竟因一男子在路口研究“红绿灯的宇宙信号”。", story: "作为一天在十字路口中心打坐，声称在接收来自仙女座星系的交通指示，导致交通堵塞，被交警带走。" },
         { headline: "求婚现场突发意外，无人机拼“嫁给我”变“快跑”，女友当场愣住。", story: "彬彬有礼租用无人机向小松鼠求婚，因小松鼠的霉运磁场影响，无人机队形错乱，拼出“快跑”(RUN)，场面一度十分尴尬。" },
-        { headline: "奸商新高度！男子街头卖“防秃顶”空气，称吸一口能固发。", story: "作业领域在街头贩卖瓶装空气，声称是“长白山原生固发空气”，平均两天路过，买了一瓶送给了三言两语。" },
+        { headline: "奸商新高度！男子街头卖“防秃顶”空气，称吸一口能固发。", story: "作业淋雨在街头贩卖瓶装空气，声称是“长白山原生固发空气”，平均两天路过，买了一瓶送给了三言两语。" },
         { headline: "浪漫晚餐变“生化实验”，男子点燃蜡烛，竟引燃女友的定型喷雾。", story: "三言两语为平均两天准备烛光晚餐，平均两天刚坐下，蜡烛就点燃了他头发上过量的定型喷雾，冒出一缕青烟。" },
         { headline: "男子体验“盲人”生活，一天后宣布“重见光明”，只因不想垃圾分类。", story: "彬彬有礼为了体验生活，蒙眼当了一天盲人，结果因为垃圾分类太麻烦，傍晚时分自己撕下眼罩，高呼“医学奇迹！”" },
         { headline: "公园相亲角惊现“宇宙级”择偶标准，要求对方必须是“非碳基生命”。", story: "作为一天在公园相亲角挂出自己的信息，择偶标准第一条：必须是非碳基生命，能适应真空环境者优先。" },
         { headline: "高速公路上惊现“龟速”跑车，车主称“在与地球同步自转”。", story: "三言两语开着跑车在高速上以20码的速度行驶，被交警拦下，他解释说：“我在体验与地球融为一体的感觉。”" },
         { headline: "男子中奖“一年份披萨”，收到365张昨日过期的优惠券。", story: "小松鼠幸运中奖“一年份披萨”，结果收到了365张优惠券，每一张都在他收到的前一天过期。" },
         { headline: "超市打折现场，两男子为最后一份半价牛排大打出手，用的竟是法棍面包。", story: "三言两语和彬彬有礼在超市为最后一份打折牛排争吵，最后升级为用刚买的法棍面包进行“法式击剑”。" },
-        { headline: "“后悔药”热销！奸商被查后辩称：你买了后悔了，说明药效达到了！", story: "作业领域因出售“后悔药”（其实是维生素C片）被投诉，他辩称：“你吃了后悔了，就说明药效达到了。”" },
+        { headline: "“后悔药”热销！奸商被查后辩称：你买了后悔了，说明药效达到了！", story: "作业淋雨因出售“后悔药”（其实是维生素C片）被投诉，他辩称：“你吃了后悔了，就说明药效达到了。”" },
         { headline: "男子报警称家中闹鬼，警察赶到发现是扫地机器人在蹦迪。", story: "彬彬有礼半夜报警称有“不明生物”在家中高速移动，警察平均两天上门后，发现是他家扫地机器人卡在了disco灯光球的开关上。" },
         { headline: "为测试头盔质量，男子用头猛撞墙壁，医生称“头盔很好，人有点傻”。", story: "三言两语为测试新买的头盔，用头猛撞墙壁导致轻微脑震荡，医生平均两天表示头盔质量确实不错。" },
         { headline: "社区出现神秘麦田怪圈，调查后发现是作为一天在练习“宇宙广播体操”。", story: "作为一天半夜在社区草坪上练习自创的“宇宙体操”，因动作幅度过大，踩出了一个类似麦田怪圈的图案。" },
-        { headline: "男子网购“隐形衣”，收到“皇帝的新衣”和一张纸条：信则有。", story: "彬彬有礼网购了一件“高科技隐形衣”，收到一个空包裹和作业领域的纸条：“只要你相信自己是隐形的，你就是隐形的。”" },
+        { headline: "男子网购“隐形衣”，收到“皇帝的新衣”和一张纸条：信则有。", story: "彬彬有礼网购了一件“高科技隐形衣”，收到一个空包裹和作业淋雨的纸条：“只要你相信自己是隐形的，你就是隐形的。”" },
         { headline: "情侣吵架，男子竟报警称“女友的可爱触犯了法律”。", story: "三言两语和平均两天吵架，三言两语竟打电话报警，声称：“我女朋友可爱到犯规，严重扰乱我的心神，你们管不管？”" },
         { headline: "男子苦练“轻功水上漂”，在小区泳池成功实现了“三秒沉”。", story: "小松鼠看了武侠片后，在小区游泳池尝试“水上漂”，结果因为脚抽筋，创造了最快下沉记录。" },
         { headline: "宠物鹦鹉学会网上购物，竟给主人订购了100箱鸟食。", story: "彬彬有礼的鹦鹉学会了模仿主人声音解锁智能音箱，并成功下单了100箱鸟食，快递送到时彬彬有礼还在睡觉。" },
@@ -276,17 +276,17 @@
         { headline: "男子沉迷占卜，竟用塔罗牌决定今天穿左脚还是右脚的袜子。", story: "作为一天每天起床后都要用塔罗牌占卜，决定今天的行动，包括先迈哪只脚，喝水用哪个杯子。" },
         { headline: "为逃避罚单，男子声称自己的车是“来自未来的交通工具，不受现代法律约束”。", story: "作为一天因违章停车被贴罚单，他向交警解释，他的车其实是一个伪装成汽车的时间机器。" },
         { headline: "广场舞大妈遇对手，两男子为抢地盘竟当场斗舞，舞姿感人。", story: "三言两语和彬彬有礼为了争夺广场中心的位置，与一群大妈展开了激烈的斗舞，最后因体力不支败下阵来。" },
-        { headline: "男子花重金购买“好运喷雾”，使用后出门踩到狗屎，卖家称“帮你躲过车祸”。", story: "作业领域向小松鼠推销“幸运喷雾”，小松鼠使用后出门踩到狗屎，作业领域解释称：“这是帮你躲过了一场车祸，踩狗屎是代价。”" },
+        { headline: "男子花重金购买“好运喷雾”，使用后出门踩到狗屎，卖家称“帮你躲过车祸”。", story: "作业淋雨向小松鼠推销“幸运喷雾”，小松鼠使用后出门踩到狗屎，作业淋雨解释称：“这是帮你躲过了一场车祸，踩狗屎是代价。”" },
         { headline: "“行为艺术家”将自己涂成绿色，在公园扮演一棵树，结果被狗当成消防栓。", story: "作为一天为了体验“万物合一”，将自己涂成绿色在公园扮演树，结果被路过的狗尿了一身。" },
         { headline: "男子因不想上班，竟报警称“公司电脑集体密谋造反”。", story: "彬彬有礼为了请假，打电话给老板说公司所有电脑都活了过来，正在策划一场推翻人类的革命。" },
-        { headline: "超市惊现“付费陪聊”服务，老板称“抚慰每一个孤独的灵魂”，实际只重复“好的呢”。", story: "作业领域推出“陪聊”业务，因聊天内容过于敷衍被差评，他的回评是：“好的呢。”" },
+        { headline: "超市惊现“付费陪聊”服务，老板称“抚慰每一个孤独的灵魂”，实际只重复“好的呢”。", story: "作业淋雨推出“陪聊”业务，因聊天内容过于敷衍被差评，他的回评是：“好的呢。”" },
         { headline: "男子坚信自己是“天选之子”，每天等待“觉醒”，结果等来了感冒。", story: "三言两语坚信自己是小说主角，每天都在期待金手指或者系统出现，结果等了一个月，只等来了流感。" }
     ];
 
     const campusNews = [
         { headline: "校园情圣深情告白，竟被学霸女友比作“节能灯”！", story: "三言两语对平均两天说“你是我生命中的光”，平均两天回应：“谢谢，我是节能灯，不是很亮还省电。”" },
-        { headline: "天选倒霉蛋？小松鼠抽中头奖与校草共进晚餐，餐厅竟停电！", story: "小松鼠参加学校年会抽中头-奖“与彬彬有礼共进晚餐”，结果当晚因为太倒霉，餐厅停电，两人摸黑吃了一顿。" },
-        { headline: "“知识胶囊”风靡校园，吃下就能变学霸？真相令人哭笑不得。", story: "作业领域推出“知识胶囊”，声称吃下就能掌握一门外语，平均两天买后发现胶囊里是写着“好好学习”的纸条。" },
+        { headline: "天选倒霉蛋？小松鼠抽中头奖与校草共进晚餐，餐厅竟停电！", story: "小松鼠参加学校年会抽中头奖“与彬彬有礼共进晚餐”，结果当晚因为太倒霉，餐厅停电，两人摸黑吃了一顿。" },
+        { headline: "“知识胶囊”风靡校园，吃下就能变学霸？真相令人哭笑不得。", story: "作业淋雨推出“知识胶囊”，声称吃下就能掌握一门外语，平均两天买后发现胶囊里是写着“好好学习”的纸条。" },
         { headline: "父子情深！学渣儿子考零分，父亲竟称其“上升空间巨大”！", story: "小松鼠考试得了0分，三言两语安慰道：“没事儿子，这说明你还有巨大的上升空间，不像爸爸，已经帅得没有提升空间了。”" },
         { headline: "校园厨神大赛惊现“分子料理”，选手竟端上一盘冰块！", story: "彬彬有礼参加厨艺比赛，主题是“分子料理”，他呈上了一盘冰块，并解释说：“这是固态的水分子。”" },
         { headline: "校园魔术表演变“灾难现场”，鸽子飞了，帽子着火了！", story: "小松鼠苦练魔术想给彬彬有礼惊喜，表演当天因运气太差，鸽子飞走了，帽子也着火了。" },
@@ -310,14 +310,14 @@
         { headline: "图书馆变“T台”，男子为吸引学妹注意，走路走出“六亲不认”的步伐。", story: "三言两语为了吸引在图书馆看书的女孩，每次经过她座位时都走出模特步，结果因为太做作被平均两天举报“行为怪异”。" },
         { headline: "校园歌手大赛，选手因忘词竟当场freestyle，内容全是“吐槽食堂饭菜”。", story: "彬彬有礼参加校园歌手大赛，上台后紧张忘词，急中生智开始freestyle，歌词全是吐槽食堂阿姨打饭手抖，意外获得全场喝彩。" },
         { headline: "选修课“天文学”作业，一学生提交“手绘月球背面地图”，称其“亲自去过”。", story: "天文学课的作业是观测月亮，作为一天提交了一份手绘的“月球背面详细地图”，并声称信息来源于“昨晚的梦境通讯”。" },
-        { headline: "“校园版致富经”：学生高价出售“学霸的空气”，称吸了能考第一。", story: "作业领域将平均两天用过的草稿纸打包，作为“学霸的灵感源泉”高价出售，竟真的有学渣购买。" },
+        { headline: "“校园版致富经”：学生高价出售“学霸的空气”，称吸了能考第一。", story: "作业淋雨将平均两天用过的草稿纸打包，作为“学霸的灵感源泉”高价出售，竟真的有学渣购买。" },
         { headline: "宿舍停电，一男子竟试图用爱“发电”，对着灯泡怒吼一小时。", story: "宿舍突然停电，三言两语为了在女生面前表现，声称自己能“用爱发电”，对着灯泡大喊“亮起来”长达一小时，直到电来了为止。" },
         { headline: "体育课测一千米，小松鼠因鞋带开了，被自己绊倒滚过终点线，竟破了纪录。", story: "体育课测一千米，小松鼠在最后一百米因为鞋带散开，被自己绊倒，一路滚过了终点，时间竟然比平时快了10秒。" },
         { headline: "为竞选学生会长，候选人彬彬有礼承诺“为每间宿舍装空调”，结果被发现学校电压根本不够。", story: "彬彬有礼竞选学生会长，豪言壮语要给所有宿舍装空调，结果被后勤部的平均两天拿出电力图打脸。" },
         { headline: "哲学课上，老师问“我是谁”，作为一天起立回答“一个等待信号的接收器”。", story: "哲学老师提问“我是谁”，作为一天站起来回答：“我是一个被困在碳基躯体里的星际信号接收器，正在等待返航指令。”" },
         { headline: "宿舍楼下惊现“求爱”蜡烛阵，摆出的竟是“WiFi密码”。", story: "三言两语想在平均两天的宿舍楼下摆蜡烛求爱，结果因为太害羞，最后摆出了宿舍的WiFi密码。" },
         { headline: "化学实验课，小松鼠错把洗手液当成反应物，制造出“史上最大泡沫”。", story: "化学实验课上，小松鼠因为太倒霉，错把一大瓶洗手液当成了催化剂，瞬间制造出的泡沫淹没了整个实验室。" },
-        { headline: "“校园奸商”新业务：代写检查，千字20元，附赠“真情流露”表情包。", story: "作业领域推出代写检查服务，并根据不同老师的喜好，提供“声泪俱下款”和“幡然醒悟款”等多种风格选择。" },
+        { headline: "“校园奸商”新业务：代写检查，千字20元，附赠“真情流露”表情包。", story: "作业淋雨推出代写检查服务，并根据不同老师的喜好，提供“声泪俱下款”和“幡然醒悟款”等多种风格选择。" },
         { headline: "英语角活动，三言两语为秀口语，竟将“How are you”说成“Who are you”。", story: "三言两语在英语角为了和外国留学生搭讪，紧张地把“How are you?”说成了“Who are you?”，对方愣了半天，回答说“I am a student.”" },
         { headline: "宿舍文化节，一寝室因太过脏乱，被评为“后现代主义装置艺术展”。", story: "作为一天和三言两语的宿舍因为太乱，在宿舍文化节评比中，被参观的平均两天评价为“完美展现了混沌理论的后现代艺术空间”。" },
         { headline: "愚人节恶作剧，学生将图书馆所有书的分类标签互换，图书管理员当场辞职。", story: "作为一天在愚人节联合小松鼠，将图书馆的社科和科幻区标签互换，导致第二天想借《资本论》的同学拿到了一本《三体》。" },
@@ -326,12 +326,12 @@
         { headline: "“校园爱迪生”作为一天发明“自动喂饭机”，结果机器把饭全喂到了鼻孔里。", story: "作为一天发明了一个自动喂饭机，第一次试验时，因为机械臂角度计算错误，把一勺饭精准地喂进了三言两语的鼻孔里。" },
         { headline: "学生为逃课，竟伪造“外星人绑架”现场，被辅导员一眼识破。", story: "作为一天为了逃课，在宿舍地上用番茄酱画了奇怪的符号，并留下一张纸条“我被母星接走了”，结果被辅导员平均两天发现他藏在床底下。" },
         { headline: "篮球赛场上，小松鼠为救球冲出场外，竟意外将场边正在喝水的平均两天撞倒。", story: "篮球赛上，小松鼠为了救一个界外球，结果脚滑飞出场外，一头撞进了正在场边喝水的平均两天的怀里，水洒了他一身。" },
-        { headline: "宿舍楼惊现“共享冰箱”，但里面的东西只能用“智力题”来换。", story: "作业领域在宿舍楼道放了一个“共享冰箱”，里面的零食需要通过解答他出的高难度谜题才能获得，平均两天是唯一一个吃胖了的。" },
+        { headline: "宿舍楼惊现“共享冰箱”，但里面的东西只能用“智力题”来换。", story: "作业淋雨在宿舍楼道放了一个“共享冰箱”，里面的零食需要通过解答他出的高难度谜题才能获得，平均两天是唯一一个吃胖了的。" },
         { headline: "毕业典礼上，一学生竟试图用无人机给自己递送毕业证书。", story: "彬彬有礼在毕业典礼上，为了出风头，试图用无人机把自己的毕业证书从校长手里运过来，结果无人机撞到了吊灯上。" },
         { headline: "食堂意见簿上惊现“用画的”意见，要求“米饭画得再圆一点”。", story: "作为一天在食堂意见簿上，用画画的方式提意见，其中一条是希望打饭阿姨把米饭盛得更像一个“完美的球体，以符合宇宙美学”。" },
         { headline: "考试周，一学生在图书馆复习，竟用五种不同颜色的荧光笔划满了整本书。", story: "彬彬有礼复习时，认为不同颜色代表不同重要等级，结果考试前一天，他发现自己的书因为划得太满，已经认不出原来的字了。" },
-        { headline: "为给女友惊喜，男生在宿舍楼下弹吉他，结果因为太难听被全楼泼水。", story: "三言两语为了给平均两天惊喜，在楼下弹吉他唱歌，结果因为五音不全，被楼上所有宿舍集体泼水，场面一度很“湿润”。" },
-        { headline: "校园跳蚤市场，作业领域竟高价出售“挂科险”，承诺“挂科双倍赔偿”。", story: "作业领域在跳蚤市场卖“挂科险”，一份100元，声称如果买了保险还挂科，就赔偿200元。结果他只卖给平均两天这种学霸。" },
+        { headline: "“声波武器”？校园歌手楼下献唱，竟因海豚音震碎三楼玻璃！", story: "三言两语为给平均两天惊喜，在楼下练习海豚音情歌，结果因为穿透力太强，意外震碎了三楼实验室的玻璃窗，被勒令赔偿。" },
+        { headline: "校园跳蚤市场，作业淋雨竟高价出售“挂科险”，承诺“挂科双倍赔偿”。", story: "作业淋雨在跳蚤市场卖“挂科险”，一份100元，声称如果买了保险还挂科，就赔偿200元。结果他只卖给平均两天这种学霸。" },
         { headline: "宿舍熄灯后，一男子竟用手电筒表演“手影戏”，内容是“外星人入侵地球”。", story: "宿舍熄灯后，作为一天用手电筒在墙上给室友们表演手影戏，故事内容是“天狼星舰队如何占领地球”，直到被宿管发现。" }
     ];
 
