--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
         { headline: "“时间胶囊”变“海洋垃圾”，男子沙滩埋宝，次日被潮水无情卷走。", story: "作为一天在沙滩上埋下“时间胶囊”，约定十年后打开，结果第二天就被涨潮冲走了。" },
         { headline: "史上最倒霉抽奖者诞生！在“谢谢惠顾”和百万游艇中，精准抽中商家瓶盖。", story: "小松鼠参加抽奖活动，在“谢谢惠顾”和“价值百万的游艇”中，精准抽中商家忘拿走的“再来一瓶”瓶盖。" },
         { headline: "城市交通瘫痪，竟因一男子在路口研究“红绿灯的宇宙信号”。", story: "作为一天在十字路口中心打坐，声称在接收来自仙女座星系的交通指示，导致交通堵塞，被交警带走。" },
-        { headline: "求婚现场突发意外，无人机拼“嫁给我”变“快跑”，女友当场愣住。", story: "彬彬有礼租用无人机向小松鼠求婚，因小松鼠的霉运磁场影响，无人机队形错乱，拼出“快跑”(RUN)，场面一度十分尴尬。" },
+        { headline: "求婚现场突发意外，无人机拼“嫁给我”变“快跑”，对象当场愣住。", story: "彬彬有礼租用无人机向小松鼠求婚，因小松鼠的霉运磁场影响，无人机队形错乱，拼出“快跑”(RUN)，场面一度十分尴尬。" },
         { headline: "奸商新高度！男子街头卖“防秃顶”空气，称吸一口能固发。", story: "作业淋雨在街头贩卖瓶装空气，声称是“长白山原生固发空气”，平均两天路过，买了一瓶送给了三言两语。" },
-        { headline: "浪漫晚餐变“生化实验”，男子点燃蜡烛，竟引燃女友的定型喷雾。", story: "三言两语为平均两天准备烛光晚餐，平均两天刚坐下，蜡烛就点燃了他头发上过量的定型喷雾，冒出一缕青烟。" },
+        { headline: "浪漫晚餐变“生化实验”，男子点燃蜡烛，竟引燃对象的定型喷雾。", story: "三言两语为平均两天准备烛光晚餐，平均两天刚坐下，蜡烛就点燃了他头发上过量的定型喷雾，冒出一缕青烟。" },
         { headline: "男子体验“盲人”生活，一天后宣布“重见光明”，只因不想垃圾分类。", story: "彬彬有礼为了体验生活，蒙眼当了一天盲人，结果因为垃圾分类太麻烦，傍晚时分自己撕下眼罩，高呼“医学奇迹！”" },
         { headline: "公园相亲角惊现“宇宙级”择偶标准，要求对方必须是“非碳基生命”。", story: "作为一天在公园相亲角挂出自己的信息，择偶标准第一条：必须是非碳基生命，能适应真空环境者优先。" },
         { headline: "高速公路上惊现“龟速”跑车，车主称“在与地球同步自转”。", story: "三言两语开着跑车在高速上以20码的速度行驶，被交警拦下，他解释说：“我在体验与地球融为一体的感觉。”" },
@@ -266,10 +266,10 @@
         { headline: "为测试头盔质量，男子用头猛撞墙壁，医生称“头盔很好，人有点傻”。", story: "三言两语为测试新买的头盔，用头猛撞墙壁导致轻微脑震荡，医生平均两天表示头盔质量确实不错。" },
         { headline: "社区出现神秘麦田怪圈，调查后发现是作为一天在练习“宇宙广播体操”。", story: "作为一天半夜在社区草坪上练习自创的“宇宙体操”，因动作幅度过大，踩出了一个类似麦田怪圈的图案。" },
         { headline: "男子网购“隐形衣”，收到“皇帝的新衣”和一张纸条：信则有。", story: "彬彬有礼网购了一件“高科技隐形衣”，收到一个空包裹和作业淋雨的纸条：“只要你相信自己是隐形的，你就是隐形的。”" },
-        { headline: "情侣吵架，男子竟报警称“女友的可爱触犯了法律”。", story: "三言两语和平均两天吵架，三言两语竟打电话报警，声称：“我女朋友可爱到犯规，严重扰乱我的心神，你们管不管？”" },
+        { headline: "情侣吵架，男子竟报警称“对象的可爱触犯了法律”。", story: "三言两语和平均两天吵架，三言两语竟打电话报警，声称：“我对象可爱到犯规，严重扰乱我的心神，你们管不管？”" },
         { headline: "男子苦练“轻功水上漂”，在小区泳池成功实现了“三秒沉”。", story: "小松鼠看了武侠片后，在小区游泳池尝试“水上漂”，结果因为脚抽筋，创造了最快下沉记录。" },
         { headline: "宠物鹦鹉学会网上购物，竟给主人订购了100箱鸟食。", story: "彬彬有礼的鹦鹉学会了模仿主人声音解锁智能音箱，并成功下单了100箱鸟食，快递送到时彬彬有礼还在睡觉。" },
-        { headline: "为证明自己有男子气概，男子生吞仙人掌，被女友紧急送医。", story: "三言两语为了向平均两天证明自己的勇气，表演生吞仙人掌（去刺的），结果因为过敏，嘴肿成了香肠。" },
+        { headline: "为证明自己有男子气概，男子生吞仙人掌，被对象紧急送医。", story: "三言两语为了向平均两天证明自己的勇气，表演生吞仙人掌（去刺的），结果因为过敏，嘴肿成了香肠。" },
         { headline: "外卖小哥收到奇葩订单，要求“把外卖放在门口，然后学三声狗叫”。", story: "平均两天点外卖，给外卖员小松鼠的备注是：“东西放门口，然后学三声狗叫再走，不然差评。”小松鼠照做了。" },
         { headline: "男子在ATM机取钱，因忘记密码，竟试图与机器“刷脸”沟通。", story: "彬彬有礼取钱忘记密码，在ATM机前摆了半天pose，试图让机器“认出”自己，最后被保安请走。" },
         { headline: "史上最懒小偷，入室盗窃后因沙发太舒服睡着，被主人叫醒。", story: "小松鼠入室盗窃，因为太累在主人彬彬有礼家的沙发上睡着了，第二天被彬彬有礼叫醒，还给他做了一顿早餐才报警。" },
@@ -284,7 +284,7 @@
     ];
 
     const campusNews = [
-        { headline: "校园情圣深情告白，竟被学霸女友比作“节能灯”！", story: "三言两语对平均两天说“你是我生命中的光”，平均两天回应：“谢谢，我是节能灯，不是很亮还省电。”" },
+        { headline: "校园情圣深情告白，竟被学霸对象比作“节能灯”！", story: "三言两语对平均两天说“你是我生命中的光”，平均两天回应：“谢谢，我是节能灯，不是很亮还省电。”" },
         { headline: "天选倒霉蛋？小松鼠抽中头奖与校草共进晚餐，餐厅竟停电！", story: "小松鼠参加学校年会抽中头奖“与彬彬有礼共进晚餐”，结果当晚因为太倒霉，餐厅停电，两人摸黑吃了一顿。" },
         { headline: "“知识胶囊”风靡校园，吃下就能变学霸？真相令人哭笑不得。", story: "作业淋雨推出“知识胶囊”，声称吃下就能掌握一门外语，平均两天买后发现胶囊里是写着“好好学习”的纸条。" },
         { headline: "父子情深！学渣儿子考零分，父亲竟称其“上升空间巨大”！", story: "小松鼠考试得了0分，三言两语安慰道：“没事儿子，这说明你还有巨大的上升空间，不像爸爸，已经帅得没有提升空间了。”" },
